--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.21.1",
     "date-object": "^2.1.1",
     "flag-icon-css": "^4.1.7",
@@ -47,6 +48,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "config": {
+    "coreui_library_short_version": "4.1"
   },
   "browserslist": {
     "production": [
