--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "@coreui/react": "^4.1.2",
     "@coreui/react-chartjs": "^2.0.3",
     "@coreui/utils": "^1.3.1",
+    "@emotion/cache": "11.7.1",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@mui/icons-material": "5.4.1",
+    "@mui/material": "^5.7.0",
+    "@mui/styled-engine": "5.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "3.4.1",
+    "chroma-js": "2.4.2",
     "core-js": "^3.21.1",
     "date-object": "^2.1.1",
     "flag-icon-css": "^4.1.7",
@@ -21,8 +29,11 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
     "js-cookie": "^3.0.1",
+    "prop-types": "15.8.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "3.0.4",
     "react-dom": "^18.0.0",
+    "react-github-btn": "1.2.1",
     "react-i18next": "^11.16.6",
     "react-multi-date-picker": "^3.3.0",
     "react-multiple-image-input": "^1.0.0",
@@ -32,26 +43,15 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
+    "react-table": "7.7.0",
     "react-toastify": "^9.0.1",
     "simplebar-react": "^2.3.6",
     "styled-components": "^5.3.5",
-    "swiper": "^8.1.4",
-    "yup": "^0.32.11",
-    "@emotion/cache": "11.7.1",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
-    "@mui/icons-material": "5.4.1",
-    "@mui/material": "5.4.1",
-    "@mui/styled-engine": "5.4.1",
-    "chart.js": "3.4.1",
-    "chroma-js": "2.4.2",
-    "prop-types": "15.8.1",
-    "react-chartjs-2": "3.0.4",
-    "react-github-btn": "1.2.1",
-    "react-table": "7.7.0",
     "stylis": "4.0.13",
     "stylis-plugin-rtl": "^2.1.1",
-    "web-vitals": "2.1.4"
+    "swiper": "^8.1.4",
+    "web-vitals": "2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
