--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-i18next": "^11.16.6",
     "react-multi-date-picker": "^3.3.0",
     "react-multiple-image-input": "^1.0.0",
+    "react-query": "^3.39.0",
     "react-redux": "^7.2.8",
     "react-responsive": "^9.0.0-beta.6",
     "react-router": "^6.3.0",
