--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.0",
     "js-cookie": "^3.0.1",
+    "leaflet": "^1.8.0",
     "prop-types": "15.8.1",
     "react": "^18.0.0",
     "react-chartjs-2": "3.0.4",
     "react-dom": "^18.0.0",
     "react-github-btn": "1.2.1",
     "react-i18next": "^11.16.6",
+    "react-leaflet": "^4.0.0",
     "react-multi-date-picker": "^3.3.0",
     "react-multiple-image-input": "^1.0.0",
     "react-query": "^3.39.0",
