--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i18next-http-backend": "^1.4.0",
     "js-cookie": "^3.0.1",
     "leaflet": "^1.8.0",
+    "photoswipe": "^5.2.7",
     "prop-types": "15.8.1",
     "react": "^18.0.0",
     "react-chartjs-2": "3.0.4",
@@ -40,6 +41,7 @@
     "react-leaflet": "^4.0.0",
     "react-multi-date-picker": "^3.3.0",
     "react-multiple-image-input": "^1.0.0",
+    "react-photoswipe-gallery": "^2.2.1",
     "react-query": "^3.39.0",
     "react-redux": "^7.2.8",
     "react-responsive": "^9.0.0-beta.6",
