--- a/package.json
+++ b/package.json
@@ -1,90 +1,90 @@
 {
-  "name": "booking",
-  "version": "0.1.4.1",
-  "private": true,
-  "homepage": ".",
-  "dependencies": {
-    "@coreui/icons": "^2.1.0",
-    "@coreui/icons-react": "^2.0.1",
-    "@coreui/react": "^4.1.2",
-    "@coreui/react-chartjs": "^2.0.3",
-    "@coreui/utils": "^1.3.1",
-    "@emotion/cache": "11.7.1",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
-    "@mui/icons-material": "5.4.1",
-    "@mui/material": "^5.7.0",
-    "@mui/styled-engine": "5.4.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
-    "chart.js": "3.4.1",
-    "chroma-js": "2.4.2",
-    "core-js": "^3.21.1",
-    "date-object": "^2.1.1",
-    "flag-icon-css": "^4.1.7",
-    "formik": "^2.2.9",
-    "i18next": "^21.6.16",
-    "i18next-browser-languagedetector": "^6.1.4",
-    "i18next-http-backend": "^1.4.0",
-    "js-cookie": "^3.0.1",
-    "leaflet": "^1.8.0",
-    "photoswipe": "^5.2.7",
-    "prop-types": "15.8.1",
-    "react": "^18.0.0",
-    "react-chartjs-2": "3.0.4",
-    "react-dom": "^18.0.0",
-    "react-github-btn": "1.2.1",
-    "react-i18next": "^11.16.6",
-    "react-leaflet": "^4.0.0",
-    "react-multi-date-picker": "^3.3.0",
-    "react-multiple-image-input": "^1.0.0",
-    "react-photoswipe-gallery": "^2.2.1",
-    "react-query": "^3.39.0",
-    "react-redux": "^7.2.8",
-    "react-responsive": "^9.0.0-beta.6",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "react-select": "^5.3.0",
-    "react-svg-star-rating": "^2.1.2",
-    "react-table": "7.7.0",
-    "react-toastify": "^9.0.1",
-    "simplebar-react": "^2.3.6",
-    "styled-components": "^5.3.5",
-    "stylis": "4.0.13",
-    "stylis-plugin-rtl": "^2.1.1",
-    "swiper": "^8.1.4",
-    "web-vitals": "2.1.4",
-    "yup": "^0.32.11"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "config": {
-    "coreui_library_short_version": "4.1"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "booking",
+	"version": "0.1.4.1",
+	"private": true,
+	"homepage": "https://hostapp.ir",
+	"dependencies": {
+		"@coreui/icons": "^2.1.0",
+		"@coreui/icons-react": "^2.0.1",
+		"@coreui/react": "^4.1.2",
+		"@coreui/react-chartjs": "^2.0.3",
+		"@coreui/utils": "^1.3.1",
+		"@emotion/cache": "11.7.1",
+		"@emotion/react": "11.7.1",
+		"@emotion/styled": "11.6.0",
+		"@mui/icons-material": "5.4.1",
+		"@mui/material": "^5.7.0",
+		"@mui/styled-engine": "5.4.1",
+		"@testing-library/jest-dom": "^5.16.2",
+		"@testing-library/react": "^12.1.4",
+		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.26.1",
+		"bootstrap": "^5.1.3",
+		"chart.js": "3.4.1",
+		"chroma-js": "2.4.2",
+		"core-js": "^3.21.1",
+		"date-object": "^2.1.1",
+		"flag-icon-css": "^4.1.7",
+		"formik": "^2.2.9",
+		"i18next": "^21.6.16",
+		"i18next-browser-languagedetector": "^6.1.4",
+		"i18next-http-backend": "^1.4.0",
+		"js-cookie": "^3.0.1",
+		"leaflet": "^1.8.0",
+		"photoswipe": "^5.2.7",
+		"prop-types": "15.8.1",
+		"react": "^18.0.0",
+		"react-chartjs-2": "3.0.4",
+		"react-dom": "^18.0.0",
+		"react-github-btn": "1.2.1",
+		"react-i18next": "^11.16.6",
+		"react-leaflet": "^4.0.0",
+		"react-multi-date-picker": "^3.3.0",
+		"react-multiple-image-input": "^1.0.0",
+		"react-photoswipe-gallery": "^2.2.1",
+		"react-query": "^3.39.0",
+		"react-redux": "^7.2.8",
+		"react-responsive": "^9.0.0-beta.6",
+		"react-router": "^6.3.0",
+		"react-router-dom": "^6.3.0",
+		"react-scripts": "5.0.0",
+		"react-select": "^5.3.0",
+		"react-svg-star-rating": "^2.1.2",
+		"react-table": "7.7.0",
+		"react-toastify": "^9.0.1",
+		"simplebar-react": "^2.3.6",
+		"styled-components": "^5.3.5",
+		"stylis": "4.0.13",
+		"stylis-plugin-rtl": "^2.1.1",
+		"swiper": "^8.1.4",
+		"web-vitals": "2.1.4",
+		"yup": "^0.32.11"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"config": {
+		"coreui_library_short_version": "4.1"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
