--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"js-cookie": "^3.0.1",
 		"leaflet": "^1.8.0",
 		"lodash": "^4.17.21",
+		"moment": "^2.29.4",
 		"photoswipe": "^5.2.7",
 		"prop-types": "15.8.1",
 		"react": "^18.0.0",
