--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@testing-library/jest-dom": "^5.16.2",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
+		"apexcharts": "^3.35.4",
 		"axios": "^0.26.1",
 		"bootstrap": "^5.1.3",
 		"chart.js": "3.4.1",
@@ -36,6 +37,7 @@
 		"photoswipe": "^5.2.7",
 		"prop-types": "15.8.1",
 		"react": "^18.0.0",
+		"react-apexcharts": "^1.4.0",
 		"react-chartjs-2": "3.0.4",
 		"react-dom": "^18.0.0",
 		"react-github-btn": "1.2.1",
